--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,255 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
 body {
-	background-color: white;
-	color: black;
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+h1.battleship-name {
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: clamp(14px, 3vw, 24px);
+  color: darkslategrey;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 1rem;
+}
+
+.main-content {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100dvh;
+}
+
+body {
+  background-color: ghostwhite;
+}
+
+.players-ships-status {
+  display: flex;
+  justify-content: space-around;
+}
+
+.your-ships,
+.opponent-ships {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.opponent-ships {
+  flex-direction: row-reverse;
+}
+
+.first-gameboard-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 2rem);
+  grid-template-rows: repeat(10, 2rem);
+  outline: 1px solid black;
+}
+
+.second-gameboard-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 2rem);
+  grid-template-rows: repeat(10, 2rem);
+  outline: 1px solid black;
+}
+
+.first-gameboard-grid > div,
+.second-gameboard-grid > div {
+  outline: 1px solid #00000055;
+}
+
+.player-ui {
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  row-gap: 2rem;
+  height: 80%;
+}
+
+.alphabet {
+  display: grid;
+  grid-template-columns: repeat(10, 2rem);
+  justify-content: center;
+  align-items: center;
+}
+
+.alphabet > div {
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: clamp(12px, 3vw, 16px);
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #777777;
+}
+
+.numbers {
+  display: grid;
+  grid-template-columns: 2rem;
+}
+
+.numbers > div {
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: clamp(12px, 3vw, 16px);
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #777777;
+}
+
+.numbers-side {
+  position: absolute;
+  left: -34px;
+}
+
+.gameboard-ui {
+  position: relative;
+}
+
+footer {
+  border-top: 1px solid lightgray;
+  outline: lightgray;
+  text-align: center;
+  padding: 1rem;
+  background-color: whitesmoke;
+  font-size: clamp(12px, 3vw, 16px);
+  font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: darkslategray;
+}
+
+.github-repos {
+  color: darkslategrey;
+  text-decoration: none;
 }
