--- a/src/css/style.css
+++ b/src/css/style.css
@@ -166,21 +166,25 @@ body {
 
 .first-gameboard-grid {
   display: grid;
-  grid-template-columns: repeat(10, 2rem);
-  grid-template-rows: repeat(10, 2rem);
+  grid-template-columns: repeat(10, 1.8rem);
+  grid-template-rows: repeat(10, 1.8rem);
+  gap: 0.25rem;
 }
 
 .second-gameboard-grid {
   display: grid;
-  grid-template-columns: repeat(10, 2rem);
-  grid-template-rows: repeat(10, 2rem);
+  grid-template-columns: repeat(10, 1.8rem);
+  grid-template-rows: repeat(10, 1.8rem);
+  gap: 0.25rem;
 }
 
 .first-gameboard-grid > div,
 .second-gameboard-grid > div {
-  outline: 1px solid #00000055;
+  outline: 1px solid cadetblue;
+  border-radius: 0.2rem;
+  display: flex;
+  place-content: center;
 }
-
 .player-ui {
   align-items: center;
   display: flex;
@@ -253,28 +257,34 @@ footer {
 }
 
 /* added classlist */
-.false {
-  background-image: url(../img/hit.svg);
-}
 
-.true {
-  background-image: url(../img/missed.svg);
+#ships {
+  background-color: white;
+  outline: 1px solid #00000033;
+  background-color: lightcoral;
 }
-
 /* is for ships */
 #false {
   background-image: url(../img/hit.svg);
+  background-color: lightcoral;
 }
 
 #true {
   background-image: url(../img/missed.svg);
 }
 
+.false {
+  background-image: url(../img/hit.svg);
+  background-color: lightcoral;
+}
+
+.true {
+  background-image: url(../img/missed.svg);
+}
+
 .circle {
   border: 1px solid gray;
   border-radius: 50%;
-  height: 1rem;
-  width: 1rem;
 }
 
 .circles {
@@ -285,10 +295,6 @@ footer {
 header#header {
   background-color: white;
   position: relative;
-}
-
-.ships {
-  background-color: darkslategray;
 }
 
 .enable-pointer {
@@ -337,9 +343,39 @@ header#header {
   display: none;
 }
 
+.hide-modal {
+  display: none;
+}
+
 /* show winner a pop up */
 .announce-winner.player-winner {
   display: flex;
   z-index: 1;
   bottom: -3rem;
+}
+
+dialog {
+  border: 2px solid gray;
+  box-shadow: 0px 0px 5px 1px #ffffff30;
+  width: 320px;
+  height: 60px;
+  outline: 2px solid white;
+  outline-offset: -3px;
+  background-color: #ffffff30;
+  border-radius: 0.75rem;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.start-game {
+  font-size: clamp(14px, 5vw, 24px);
+  font-family: roboto;
+  color: #0f0f3b;
+}
+
+.reposition {
+  font-size: clamp(14px, 5vw, 24px);
+  font-family: roboto;
+  color: #0f0f3b;
 }
